# calrs

./: .gitignore  CHANGELOG.md  CLAUDE.md  CNAME  Cargo.toml  Dockerfile  README.md  index.html  seed_screenshots.sh
.github/workflows/: ci.yml
assets/: embed.js
assets/intl-tel-input/: intlTelInput.min.css
docs/: 404.html  admin.html  architecture.html  authentication.html  book.toml  booking-flow.html  caldav.html  cli-reference.html  deployment.html  event-types.html  getting-started.html  google-calendar.html  groups.html  index.html  introduction.html  print.html  searcher-c2a407aa.js  searchindex-0d3c6d9f.js  searchindex-3fc2d7cc.js  searchindex-44ceb4cd.js  searchindex-6eb64fb0.js  searchindex-745e7865.js  searchindex-76d3bfb7.js  searchindex-7aceebe8.js  searchindex-990578b8.js  searchindex-ea672371.js  searchindex-ea67b571.js  searchindex-fe69d4a2.js  security.html  team-links.html  teams.html  toc-3792cc5d.js  toc-62663ed4.js  toc-a5a99992.js  toc-fb1b7d91.js  toc.html
docs/src/: SUMMARY.md  admin.md  architecture.md  authentication.md  authentik.md  booking-flow.md  caldav.md  cli-reference.md  deployment.md  event-types.md  ews-impersonation.md  getting-started.md  google-calendar.md  groups.md  introduction.md  security.md  team-links.md  teams.md
examples/: ews_smoke.rs
i18n/de/: main.ftl
i18n/en/: main.ftl
i18n/es/: main.ftl
i18n/et/: main.ftl
i18n/fr/: main.ftl
i18n/it/: main.ftl
i18n/pl/: main.ftl
migrations/: 002_auth.sql  003_username.sql  004_oidc.sql  005_requires_confirmation.sql  007_caldav_write.sql  008_recurrence_id.sql  009_uid_recurrence_unique.sql  012_reminders.sql  014_team_links.sql  015_user_profile.sql  016_booking_unique.sql  018_private_invites.sql  020_booking_attendees.sql  021_accent_color.sql  022_theme.sql  023_team_link_windows.sql  026_visibility.sql  027_calendar_sync_token.sql  028_company_link.sql  032_event_type_member_weights.sql  033_group_profile.sql  035_drop_legacy_team_links.sql  038_first_slot_only.sql  040_user_availability.sql  041_last_full_sync.sql  043_event_type_watchers.sql  044_booking_claim.sql  045_slot_interval.sql  046_event_type_timezone.sql  046_ldap.sql  047_user_language.sql  048_booking_language.sql  049_smtp_decouple_account.sql  050_ldap.sql  050_min_notice_cancel_reschedule.sql  051_oauth2_caldav.sql  051_per_member_frequency_limit.sql  052_smtp_tls_mode.sql  055_provider_type.sql  056_lead_capture.sql  (+9 more)
src/: auth.rs  crypto.rs  db.rs  email.rs  i18n.rs  lib.rs  main.rs  models.rs  rrule.rs  settings.rs  utils.rs
src/caldav/: mod.rs
src/commands/: booking.rs  calendar.rs  config.rs  event_type.rs  mod.rs  source.rs  sync.rs  user.rs
src/ews/: autodiscover.rs  ical.rs  mod.rs  operations.rs  parse.rs  soap.rs
src/leads/: config.rs  db.rs  mod.rs
src/providers/: caldav.rs  factory.rs  mod.rs
src/web/: ews_global.rs  leads.rs  meeting.rs  mod.rs
templates/: admin.html  base.html  book.html  booking_action_blocked.html  booking_action_error.html  booking_already_claimed.html  booking_approve_form.html  booking_approved.html  booking_cancel_form.html  booking_cancelled_guest.html  booking_claim_form.html  booking_claimed.html  booking_decline_form.html  booking_declined.html  booking_reschedule_confirm.html  confirmed.html  dashboard.html  dashboard_base.html  dashboard_bookings.html  dashboard_event_types.html  dashboard_group_detail.html  dashboard_groups.html  dashboard_internal.html  dashboard_leads.html  dashboard_overview.html  dashboard_sources.html  dashboard_team_links.html  dashboard_teams.html  embed.html  event_type_form.html  group_profile.html  group_settings.html  invite_form.html  overrides.html  profile.html  settings.html  slots.html  source_form.html  source_test.html  source_write_setup.html  (+5 more)
templates/auth/: login.html  register.html
