[package]
name = "calrs"
version = "0.23.0"
edition = "2021"
description = "A fast, self-hostable scheduling platform. Like Cal.com, but written in Rust."
license = "AGPL-3.0"
repository = "https://github.com/olivierlambert/calrs"

[[bin]]
name = "calrs"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "migrate", "chrono", "uuid"] }

# HTTP client (for CalDAV)
reqwest = { version = "0.11", features = ["rustls-tls", "json"], default-features = false }

# Time & timezone
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Error handling
anyhow = "1"

# Secrets / config
directories = "5"

# Terminal output
colored = "2"
tabled = "0.15"
hex = "0.4"
rpassword = "7"

# Email (SMTP)
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "builder", "smtp-transport", "hostname"] }

# Web server
axum = { version = "0.8", features = ["macros", "multipart"] }
axum-extra = { version = "0.10", features = ["cookie", "form"] }
minijinja = { version = "2", features = ["loader"] }
tower-http = { version = "0.6", features = ["trace"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Encryption (credential storage)
aes-gcm = "0.10"

# Auth
argon2 = { version = "0.5", features = ["rand"] }
rand = "0.8"
base64 = "0.22"
openidconnect = { version = "4.0.1", default-features = false, features = ["reqwest", "rustls-tls"] }
iana-time-zone = "0.1.65"
urlencoding = "2"

[dev-dependencies]
